[package]
name = "get-pgn"
version = "0.1.0"
authors = ["Luther Barnum <luther.barnum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.reqwest]
version = "0.10.8"
default-features = true
features = ["blocking"]

[dependencies.error-chain]
version = "0.12.4"
default-features = true

[dependencies.serde_json]
version = "1.0.57"

[dependencies.serde]
version = "1.0.57"
features = ["derive"]

[dependencies.curl]
version = "0.4.33"

[dependencies.restson]
version = "^0.6"