[package]
name = "get-pgn"
version = "0.1.0"
authors = ["Luther Barnum <luther.barnum@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.57"
curl = "0.4.33"
restson = "0.6.0"
clap = "2.33.3"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.reqwest]
version = "0.10.8"
default-features = true
features = ["blocking"]

[dependencies.error-chain]
version = "0.12.4"
default-features = true

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

